set up sign up and sign in

--- a/src/Components/Navbar/Navbar.html
+++ b/src/Components/Navbar/Navbar.html
@@ -16,7 +16,7 @@
         <!-- Link to the home page -->
         <a href="/">
           StayHealthy
-        <img src="../pictures/doctor logo.png" height="39" width="39">
+        <img src="../../grihf-frontend_capstone_starter_code//pictures/doctor logo.png" height="39" width="39">
       </div>
       <!-- Navigation icon section with an onClick event listener -->
       <div class="nav__icon" onClick="{handleClick}">
